HADOOP-11620. Add support for load balancing across a group of KMS for HA. Contributed by Arun Suresh.